# Human_Humanoid_Interaction

./: .gitignore  .gitmodules
.history/: .gitignore_20260228112938  .gitignore_20260228112950
docker/: Dockerfile  requirements.txt
g1_configs/: pc_cyclonedds.xml  pc_setup_cyclonedds.sh  zed_cyclonedds.xml  zed_setup_cyclonedds.sh
g1_real_ws/: MUJOCO_LOG.TXT
g1_real_ws/bdcc_exp/runs/real_default/S1_self_collision/run_001/: cbf_runtime_stats.md  manifest.json  metrics_summary.csv  metrics_summary.json  metrics_timeseries.csv  run.yaml  topics.npz
g1_real_ws/bdcc_exp/runs/real_default/S2_human_robot_2/run_001/: cbf_runtime_stats.md  manifest.json  metrics_summary.csv  metrics_summary.json  metrics_timeseries.csv  run.yaml  topics.npz
g1_real_ws/bdcc_exp/runs/real_default/both/run_001/: cbf_runtime_stats.md  manifest.json  metrics_summary.csv  metrics_summary.json  metrics_timeseries.csv  run.yaml  topics.npz
g1_real_ws/bdcc_exp/runs/sim_default/S1_self_collision/run_001/: manifest.json  metrics_summary.csv  metrics_summary.json  metrics_timeseries.csv  run.yaml  topics.npz
g1_real_ws/bdcc_exp/runs/sim_default/S2_human_robot_2/run_001/: manifest.json  metrics_summary.csv  metrics_summary.json  metrics_timeseries.csv  run.yaml  topics.npz
g1_real_ws/bdcc_exp/scripts/: analyze_cbf_runtime_stats.py  command.md
g1_real_ws/bdcc_exp/scripts/log/: trial_topic_logger.py
g1_real_ws/bdcc_exp/scripts/offline/: offline_compute_metrics.py
g1_real_ws/bdcc_exp/scripts/plot/: plot_real_both_collision.py  plot_real_human_robot.py  plot_real_self_collision.py  plot_sim_human_robot.py  plot_sim_self_collision.py
g1_real_ws/bdcc_exp/scripts/record/: record_skeleton_segment.py
g1_real_ws/bdcc_exp/scripts/replay/: replay_skeleton_segment.py
g1_real_ws/bdcc_exp/scripts/sweep/: aggregate_sweep_results.py  plot_pareto_tradeoff.py  plot_sweep_heatmaps.py  run_parameter_sweep.py
g1_real_ws/bdcc_exp/segments/S1_self_collision/: confidence.npz  diagnostics.npz  manifest.json  segment.yaml  skeleton_filtered.npz  skeleton_raw.npz
g1_real_ws/bdcc_exp/segments/S2_human_robot/: confidence.npz  diagnostics.npz  manifest.json  segment.yaml  skeleton_filtered.npz
g1_real_ws/bdcc_exp/segments/S2_human_robot_1/: confidence.npz  diagnostics.npz  manifest.json  segment.yaml  skeleton_filtered.npz
g1_real_ws/bdcc_exp/segments/S2_human_robot_2/: confidence.npz  diagnostics.npz  manifest.json  segment.yaml  skeleton_filtered.npz
g1_real_ws/ecc_sim/data/: realtime_self_collision.csv
g1_real_ws/ecc_sim/result/: command_level_human_robot_metrics.csv
g1_real_ws/ecc_sim/script/human_robot/command_level/: command_level_human_robot_metric_logger.py  command_level_plot_human_robot_metrics.py
g1_real_ws/ecc_sim/script/human_robot/controller_output_level/: human_robot_metric_logger.py  plot_human_robot_metrics.py  record_nominal_and_capsules.py  replay_nominal_and_capsules.py
g1_real_ws/ecc_sim/script/self/: command_level_plot_self_collision.py  command_level_self_collision_recorder.py
g1_real_ws/src/: g1_arm_sdk_bridge.cpp
g1_real_ws/src/g1_cbf_ros2/g1_cbf/: CMakeLists.txt  package.xml
g1_real_ws/src/g1_cbf_ros2/g1_cbf/config/: params.yaml
g1_real_ws/src/g1_cbf_ros2/g1_cbf/g1_cbf/: calibration_kinematics.py  calibration_sampler.py  cbf.py  collider_viz.py  kinematics.py  qp_solver.py  scaling.py
g1_real_ws/src/g1_cbf_ros2/g1_cbf/launch/: g1_cbf.launch.xml
g1_real_ws/src/g1_cbf_ros2/g1_cbf/rviz/: config.rviz  config_real.rviz  config_sim.rviz
g1_real_ws/src/g1_cbf_ros2/g1_cbf/scripts/: bbox_node.py  calibration_sampler_node.py  g1_cbf_node.py  ghost_publisher_node.py
g1_real_ws/src/g1_cbf_ros2/g1_description/: CMakeLists.txt  package.xml
g1_real_ws/src/g1_cbf_ros2/g1_description/urdf/: g1_29dof.urdf
g1_real_ws/src/mujoco_g1/: setup.cfg  setup.py
g1_real_ws/src/mujoco_g1/launch/: auto_tag_calibration.launch.py  bdcc_unified_pipeline.launch.py  run_pipeline.launch.py  run_pipeline_with_cbf.launch.py  unified_pipeline.launch.py
g1_real_ws/src/mujoco_g1/mujoco_g1/: g1_controller.py  g1_joint_mapper.py  human_angle_estimator.py  human_capsule_frame_transform.py  human_skeleton_capsule.py  jointstate_to_array_qdes.py  zed_skeleton_points_preprocessor.py
g1_real_ws/src/mujoco_g1/mujoco_g1/components/: angle_filter.py  human_angle_estimator_core.py  human_math.py  human_pose_preprocessor.py  mujoco_29dof_urdf_indices.py  utils.py
g1_real_ws/src/mujoco_g1/mujoco_g1/rviz/: config.rviz
g1_real_ws/src/real_g1/: CMakeLists.txt  package.xml
g1_real_ws/src/real_g1/launch/: g1_arm_sdk_bridge.launch.py
g1_real_ws/src/real_g1/src/: g1_arm_sdk_bridge.cpp
g1_real_ws/src/zed_skeleton_pub/: CMakeLists.txt  README.md
g1_real_ws/src/zed_skeleton_pub/cpp/: CMakeLists.txt
g1_real_ws/src/zed_skeleton_pub/cpp/include/: FusionGLViewer.hpp  utils.hpp
g1_real_ws/src/zed_skeleton_pub/cpp/src/: FusionGLViewer.cpp  GLViewer.cpp  TrackingViewer.cpp  calibration_main.cpp  fusion_calibration_main.cpp  fusion_main.cpp  main.cpp  main.cpp.bak
g1_real_ws/src/zed_skeleton_pub/python/: body_tracking.py
g1_repos/unitree_g1/: g1_mjx.xml
ros2_ws/scripts/: jetson_run_zedx_gui.sh  jetson_start_discovery_server.sh  run_gi_ik_controller.sh
ros2_ws/src/mujoco_g1/: package.xml  setup.py
ros2_ws/src/mujoco_g1/mujoco_g1/: g1_controller.py  g1_joint_mapper.py  human_angle_estimator.py  skeleton_listener.py
ros2_ws/src/mujoco_g1/mujoco_g1/components/: angle_filter.py  human_angle_estimator_core.py
ros2_ws/src/mujoco_g1_ik/: package.xml  setup.cfg  setup.py
ros2_ws/src/mujoco_g1_ik/mujoco_g1_ik/: g1_ik_controller.py  skeleton_listener.py
ros2_ws/src/mujoco_g1_ik/mujoco_g1_ik/components/: filtering.py  retargeting.py  tasks.py  zed_indices.py
ros2_ws/src/zed_skeleton_pub/: CMakeLists.txt  package.xml
ros2_ws/src/zed_skeleton_pub/cpp/include/: GLViewer.hpp  TrackingViewer.hpp
ros2_ws/src/zed_skeleton_pub/cpp/src/: GLViewer.cpp  main.cpp
ros2_ws/src/zed_skeleton_pub/python/: body_tracking.py  requirements.txt
ros2_ws/src/zed_skeleton_pub/src/: dummy_skeleton_pub.cpp
