<?xml version="1.0"?>
<package format="3">
  <name>real_g1</name>
  <version>0.0.1</version>
  <description>Unitree G1 arm SDK bridge node</description>

  <maintainer email="wenqicai.97@gmail.com">Wenqi Cai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>