<?xml version="1.0"?>
<package format="3">
  <name>mujoco_g1</name>
  <version>0.0.1</version>
  <description>MuJoCo G1 controller (no IK)</description>
  <maintainer email="wenqicai.97@gmail.com">Wenqi Cai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
