<?xml version="1.0"?>
<package format="3">
  <name>zed_skeleton_pub</name>
  <version>0.0.1</version>
  <description>ZED body tracking skeleton publisher (PointCloud2 + confidence)</description>
  <maintainer email="wenqicai.97@gmail.com">Wenqi Cai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
