<?xml version="1.0"?>
<package format="3">
  <name>g1_description</name>
  <version>0.0.1</version>
  <description>URDF description for the Unitree G1 29-DOF humanoid robot</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
